--- a/old/index.html
+++ b/old/index.html
@@ -104,7 +104,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>I am a pre final year undergrad at Indian Institute Of Information Technology Allahabad. I have been doing web development for the last 3 years. I am from Kerala also known as the God Own Country.</p>
+					<p>I am a Software Engineer at Deutsche Telekom Digital Labs and a B.Tech Graduant from Indian Institute Of Information Technology Allahabad.  I am from Kerala also known as the God Own Country.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://twitter.com/aswinvb1"><i class="icon-twitter2"></i></a></li>
